# cfi-eval

./: README.md
cbench/: README.md
cbench/assembly_support/: aarch64_inline_icall.c  aarch64_inline_ijmp.c  x86_inline_icall  x86_inline_icall.c  x86_inline_icall.py  x86_inline_ijmp  x86_inline_ijmp.c  x86_inline_ijmp.py
cbench/cross_DSO/: test.sh
cbench/cross_DSO/return_address/: lib.c  lib.h  main  main.c  vul.py
cbench/indirect_call/: README.md  ptr_OOB  ptr_OOB.c  ptr_overwrite  ptr_overwrite.c  ptr_overwrite.py
cbench/indirect_jump/: README.md  setjmp.c  setjmp.py  tailcall_overwrite  tailcall_overwrite.c  tailcall_overwrite.py  tailcall_reuse_multithreading  tailcall_reuse_multithreading.c  tailcall_reuse_single_phread  tailcall_reuse_single_phread.c
cbench/return_address/: ret_injection  ret_injection.c  vul.py
cbench/type_confusion/: cfi_function  cfi_function.c  cfi_object  cfi_object.cpp  cfi_object_function  cfi_object_function.cpp
cbench/vDSO_test/: README.md  vdso_test  vdso_test.c
cbench/virtual_call/: coop  coop.cpp  coop.py  vtable_injection_overflow  vtable_injection_overflow.cpp  vtable_injection_overflow.py  vtable_injection_uaf  vtable_injection_uaf.cpp  vtable_injection_uaf.py  vtable_reuse_uaf  vtable_reuse_uaf.cpp  vtable_reuse_uaf.py
cscan/: README.md
cscan/DebugPass/DebugPass-LLVM/: CMakeLists.txt  README.md  run.sh
cscan/DebugPass/DebugPass-MCFI_PICFI/: README.md
cscan/DebugPass/DebugPass-Other/: README.md  run.sh
cscan/new/: Cargo.toml
cscan/new/src/: debugger.rs  export.rs  main.rs  range_set.rs  verifier.rs
(+50 files in other folders)
